--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -39,7 +39,7 @@
         app:layout_constraintTop_toBottomOf="@+id/button_A" />
 
     <Button
-        android:id="@+id/button_send"
+        android:id="@+id/buttonSend"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
